--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/8gcNTBXuQ-A?si=V9OKiauvbq91vWHM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-	<audio controls src="joswaln.mP3"></audio>
+	<audio controls src="/joswaln.mP3"></audio>
 
 </body>
 </html>
